# kitsunekko-tools

./: .gitignore  README.md  format.sh  kitsunekko-dl.py  pyproject.toml  requirements.txt  run  settings.json  upload
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: black.yml  ci-cd.yml
kitsunekko_tools/: __init__.py  __main__.py  common.py  config.py  consts.py  download.py  entry.py  file_downloader.py  filesystem.py  ignore.py  kitsu_download.py  kitsu_parse.py  kitsu_types.py  kitsunekko_dl.py  local_state.py  mega_upload.py  sanitize.py  settings.json  tsv_utils.py
kitsunekko_tools/api_access/: directory.py  directory_entry.py  download.py  file_entry.py  rate_limit.py  root_directory.py
kitsunekko_tools/example_catalog/: rebuild.sh
kitsunekko_tools/example_catalog/_site/: drama.html  index.html  not_found.html
kitsunekko_tools/example_catalog/_site/anime/: nohara-hiroshi.-hiru-meshi-no-ryuugi.html  ranma-1∕2-(2024)-2nd-season.html  spy×family-season-3.html  youkai-apartment-no-yuuga-na-nichijou.html
kitsunekko_tools/example_catalog/_site/anime_tv/: ranma-1∕2-(2024)-2nd-season.html  spy×family-season-3.html
kitsunekko_tools/example_catalog/_site/drama/: setsuen-chase.html  zutto-dokushin-de-iru-tsumori？.html  雪煙チェイス.html
kitsunekko_tools/example_catalog/_site/drama_movie/: sensei-no-shiroi-uso.html  zutto-dokushin-de-iru-tsumori？.html
kitsunekko_tools/example_catalog/_site/drama_tv/: setsuen-chase.html  雪煙チェイス.html
kitsunekko_tools/example_catalog/_site/entries/: nohara-hiroshi.-hiru-meshi-no-ryuugi.html  ranma-1∕2-(2024)-2nd-season.html  spy×family-season-3.html
kitsunekko_tools/example_catalog/_site/resources/: site.css  site.js
kitsunekko_tools/example_catalog/_site/unsorted/: youkai-apartment-no-yuuga-na-nichijou.html
kitsunekko_tools/example_catalog/resources/: site.css  site.js
kitsunekko_tools/example_catalog/subtitles/Nohara Hiroshi. Hiru Meshi no Ryuugi/: .kitsuignore
kitsunekko_tools/example_catalog/subtitles/anime_tv/Ranma 1∕2 (2024) 2nd Season/: .kitsuignore  [Erai-raws] Ranma 1 2 (2024) 2nd Season - 01 [1080p NF WEB-DL AVC AAC][JPN][8FC0C2D2].ass  [Nekomoe kissaten&LoliHouse] Ranma ½ 2024 - 14 [WebRip 1080p HEVC-10bit AAC ASSx2][CHS, JPN].ass  らんま1 2.S02E14.「ムース襲来」.WEBRip.Netflix.ja[cc].srt
kitsunekko_tools/example_catalog/templates/: base.html  entry.html  index.html  not_found.html
kitsunekko_tools/scrapper/: __init__.py  dir_path_matcher.py  download.py  parse.py  types.py
kitsunekko_tools/website/: context.py  filesystem.py  templates.py  website.py
scripts/: format.sh
tests/: test_common.py  test_directory.py  test_parser.py
tests/data/: entries_search_anime_response.json  entries_search_dramas_response.json  main_dir_page.html  subs_page.html
(+2 files in other folders)
