[project]
name = "kitsunekko-tools"
description = "A set of scripts for creating a local kitsunekko mirror."
readme = "README.md"
dynamic = ["version"]
authors = [
  { name = "Ren Tatsumoto", email = "tatsu@autistici.org" },
]
dependencies = [
  "httpx[socks]>=0.27"
]
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.scripts]
ktools = "kitsunekko_tools.__main__:main"

[tool.hatch.build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "kitsunekko_tools/__init__.py"

[tool.black]
line-length = 120
target-version = ['py311']
